dockerjava-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: dockerjava
  name: dockerjava
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dockerjava
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_puente: "true"
        io.kompose.service: dockerjava
    spec:
      containers:
      - image: dockerjava
        imagePullPolicy: ""
        name: dockerjava
        ports:
        - containerPort: 8080
        - containerPort: 9990
        resources: {}
      hostname: dockerjava
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
