dockerangular-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: dockerangular
  name: dockerangular
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 4200
  selector:
    io.kompose.service: dockerangular
status:
  loadBalancer: {}
