dockerjava-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: dockerjava
  name: dockerjava
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "9990"
    port: 9990
    targetPort: 9990
  selector:
    io.kompose.service: dockerjava
status:
  loadBalancer: {}
