docker_puente-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker_puente
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/docker_puente: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker_puente: "true"
